//
//  AccessibilityLabels.swift
//  WoopEvents
//
//  Created by Fredyson Costa Marques Bentes on 14/04/20.
//  Copyright © 2020 home. All rights reserved.
//

import Foundation

enum AccessibilityLabels {
    
    static let eventDetailBackButton = "Eventos"
    static let checkinButton = "CHECK-IN"
    static let checkinConfirmButton = "CONFIRMAR"
    static let checkinBackButton = "Voltar"
    
}
